# it515r

./: .gitignore  CMakeLists.txt  README.md  barrier.hh  binary.cpp  grid.h  grid2pgm.cpp  openmp.cpp  practice.tar  solver.cpp  threads.cpp
p2/: solver.cpp
p3/: binary  solver  solver.cpp
p4/: README.md  binary.cpp  grid.h  grid2pgm.cpp  solver.cpp
phase1/: scanner  scanner.cpp
phase2/: binary.cpp  scanner.cpp  solver.cpp
practice/: README.md  analyze.awk  energize.sh
results/: eight_time.txt  four_time.txt  job.sh  single_time.txt  sixteen_time.txt  slurm-15432665.out  slurm-15625287.out  t_single_time.txt  two_time.txt
